[gd_scene load_steps=2 format=3 uid="uid://ccm8jjxh5yowy"]

[ext_resource type="Script" path="res://components/componentScripts/boon_container.gd" id="1_fds8c"]

[node name="BoonContainer" type="Control"]
visible = false
custom_minimum_size = Vector2(400, 240)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1520.0
offset_bottom = -840.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fds8c")

[node name="BoonTitlePanel" type="Panel" parent="."]
layout_mode = 0
offset_right = 400.0
offset_bottom = 40.0
theme_type_variation = &"ComponentPanel"

[node name="BoonTitle" type="Label" parent="BoonTitlePanel"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 40.0
theme_type_variation = &"LabelTitle"
text = "<Boons>"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BoonsContainer" type="Panel" parent="."]
layout_mode = 0
offset_top = 40.0
offset_right = 400.0
offset_bottom = 240.0
theme_type_variation = &"ComponentPanelBottom"

[node name="M" type="MarginContainer" parent="BoonsContainer"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 200.0
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="S" type="ScrollContainer" parent="BoonsContainer/M"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="V" type="HFlowContainer" parent="BoonsContainer/M/S"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
theme_override_constants/h_separation = 10
